--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.14.0",
     "my-firebase-app": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
